<?xml version="1.0"?>
<package format="2">
  <name>demo_ros</name>
  <version>0.1.0</version>
  <description>Este es el demo de un paquete en ros</description>
  <maintainer email="rivascf@gmail.com">frivas</maintainer>

  <license>MIT</license>
  <url type="website">http://unam.mx/mrg/demo_ros</url>
  <author email="rivascf@gmail.com">Felipe Rivas</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <!--<build_depend>roscpp</build_depend> -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!--<build_export_depend>roscpp</build_export_depend>-->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <!--<exec_depend>roscpp</exec_depend>-->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
